# metadata2workflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_GUIDE.md  IMAGE_UPLOAD_GUIDE.md  JETBRAINS_OPENSOURCE.md  LICENSE  README.md  __init__.py  multiple_lora_test.txt  pyproject.toml  requirements.txt  test_formats.txt  test_metadata.txt  test_metadata_parser.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
js/: metadata2workflow.js
nodes/: __init__.py  metadata_parser.py  workflow_generator.py  workflow_generator_old.py
