[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-metadata2workflow"
version = "1.1.0"
description = "A ComfyUI plugin that parses Civitai image metadata and automatically generates workflows"
authors = [
    {name = "ComfyUI Metadata2Workflow Contributors", email = "your.email@example.com"}
]
maintainers = [
    {name = "Project Maintainer", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "comfyui",
    "civitai", 
    "metadata",
    "workflow",
    "ai",
    "stable-diffusion",
    "plugin",
    "extension"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/comfyui-metadata2workflow"
Repository = "https://github.com/yourusername/comfyui-metadata2workflow.git"
Issues = "https://github.com/yourusername/comfyui-metadata2workflow/issues"
Documentation = "https://github.com/yourusername/comfyui-metadata2workflow#readme"
Changelog = "https://github.com/yourusername/comfyui-metadata2workflow/releases"
"Bug Reports" = "https://github.com/yourusername/comfyui-metadata2workflow/issues"
"Feature Requests" = "https://github.com/yourusername/comfyui-metadata2workflow/issues"
Discussions = "https://github.com/yourusername/comfyui-metadata2workflow/discussions"
"Funding" = "https://github.com/sponsors/yourusername"

[tool.setuptools]
packages = ["nodes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.js", "*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"